Ampliato database parole e rimossi limiti di lunghezza - parole da 2 a 12+ lettere

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <!-- Schermata inserimento parola (modalità 2 giocatori) -->
         <div id="wordInput" class="screen">
             <h2 class="title">Giocatore 1</h2>
-            <p class="subtitle">Inserisci una parola segreta (3-6 lettere)</p>
+            <p class="subtitle">Inserisci una parola segreta (minimo 2 lettere)</p>
             
             <input type="text" 
                    id="secretWord" 
                    class="word-input" 
                    placeholder="Scrivi la parola..." 
-                   maxlength="6"
+                   maxlength="20"
                    autocomplete="off">
             
             <button class="btn-primary" onclick="startGame()">Inizia il Gioco! 🚀</button>
